--- a/plugins/Feedback/templates/index.twig
+++ b/plugins/Feedback/templates/index.twig
@@ -12,13 +12,13 @@
 
         <div class="header_full">
             <p>{{ 'General_PiwikIsACollaborativeProjectYouCanContributeAndDonate'|translate(
-            "<a href='?module=Proxy&action=redirect&url=http://piwik.org' rel='noreferrer' target='_blank'>",
+            "<a href='?module=Proxy&action=redirect&url=http://piwik.org' target='_blank'>",
             "</a>",
-            "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/get-involved/'>",
+            "<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/get-involved/'>",
             "</a>",
             "<a href='#donate'>",
             "</a>",
-            "<a href='?module=Proxy&action=redirect&url=http://piwik.org/team/' rel='noreferrer' target='_blank'>",
+            "<a href='?module=Proxy&action=redirect&url=http://piwik.org/team/' target='_blank'>",
             "</a>"
             )|raw }}
             </p>
@@ -28,9 +28,9 @@
         <h2>{{ 'Do you need help?'|translate }}</h2>
 
         <div class="header_full">
-            <p> &bull; {{ 'Feedback_ViewUserGuides'|translate("<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/'>","</a>")|raw }}.</p>
-            <p> &bull; {{ 'Feedback_ViewAnswersToFAQ'|translate("<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/faq/'>","</a>")|raw }}.</p>
-            <p> &bull; {{ 'Feedback_VisitTheForums'|translate("<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://forum.piwik.org/'>","</a>")|raw }}.</p>
+            <p> &bull; {{ 'Feedback_ViewUserGuides'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/'>","</a>")|raw }}.</p>
+            <p> &bull; {{ 'Feedback_ViewAnswersToFAQ'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/faq/'>","</a>")|raw }}.</p>
+            <p> &bull; {{ 'Feedback_VisitTheForums'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://forum.piwik.org/'>","</a>")|raw }}.</p>
             <br/>
         </div>
 
@@ -38,13 +38,13 @@
 
         <div class="header_full">
             <p>{{ 'Feedback_HowToCreateTicket'|translate(
-                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-bug-report'>",
+                "<a target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-bug-report'>",
                 "</a>",
-                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-feature-request'>",
+                "<a target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-feature-request'>",
                 "</a>",
-                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues'>",
+                "<a target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues'>",
                 "</a>",
-                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues/new'>",
+                "<a target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues/new'>",
                 "</a>"
                 )|raw }}</p>
             <br/>
@@ -54,7 +54,7 @@
 
         <div class="header_full">
             <p>{{ 'Feedback_GetInTouch'|translate }}
-                <a rel='noreferrer' target='_blank' href="?module=Proxy&action=redirect&url=http://piwik.org/contact/"
+                <a target='_blank' href="?module=Proxy&action=redirect&url=http://piwik.org/contact/"
                     >{{ 'Feedback_ContactThePiwikTeam'|translate }}</a>
             </p>
             <br/>
@@ -96,7 +96,7 @@
                 <li><a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/thank-you-all/">Credits</a></li>
             </ul>
             <p class="claim"><small>{{ 'Feedback_PrivacyClaim'|translate(
-                    "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/privacy/'>",
+                    "<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/privacy/'>",
                     "</a>"
                 )|raw}}</small></p>
         </div>
