--- a/plugins/Installation/templates/systemCheck.twig
+++ b/plugins/Installation/templates/systemCheck.twig
@@ -24,7 +24,7 @@
     <br/>
     <p>
         <img src='plugins/Morpheus/images/link.gif'/> &nbsp;
-        <a href="?module=Proxy&action=redirect&url=http://piwik.org/docs/requirements/" rel="noreferrer"  target="_blank">{{ 'Installation_Requirements'|translate }}</a>
+        <a href="?module=Proxy&action=redirect&url=http://piwik.org/docs/requirements/" target="_blank">{{ 'Installation_Requirements'|translate }}</a>
     </p>
     {% include "@Installation/_systemCheckLegend.twig" %}
 {% endif %}
