--- a/plugins/TestRunner/templates/travis.yml.twig
+++ b/plugins/TestRunner/templates/travis.yml.twig
@@ -22,6 +22,9 @@ php:
 {% endfor %}
 {% endif %}
 
+services:
+  - redis-server
+
 # Separate different test suites
 {% if existingEnv|default is empty -%}
 env:
