moved resolution and configuration reports to a new plugin

--- a/plugins/UserSettings/templates/index.twig
+++ b/plugins/UserSettings/templates/index.twig
@@ -8,9 +8,9 @@
 
 <div id='rightcolumn'>
 
-    <h2 piwik-enriched-headline>{{ 'UserSettings_Resolutions'|translate }}</h2>
+    <h2 piwik-enriched-headline>{{ 'Resolution_Resolutions'|translate }}</h2>
     {{ dataTableResolution|raw }}
 
-    <h2 piwik-enriched-headline>{{ 'UserSettings_Configurations'|translate }}</h2>
+    <h2 piwik-enriched-headline>{{ 'Resolution_Configurations'|translate }}</h2>
     {{ dataTableConfiguration|raw }}
 </div>
