Add always_populate_raw_post_data=-1 to php.ini in travis.

--- a/plugins/TestRunner/templates/travis.yml.twig
+++ b/plugins/TestRunner/templates/travis.yml.twig
@@ -137,6 +137,9 @@ before_script:
     phpenv config-rm xdebug.ini;
     fi
 
+  # add always_populate_raw_post_data=-1 to php.ini
+  - echo "always_populate_raw_post_data=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+
   - ./tests/travis/configure_git.sh
 
   # print out mysql information
