--- a/plugins/Morpheus/stylesheets/base.less
+++ b/plugins/Morpheus/stylesheets/base.less
@@ -24,6 +24,7 @@
 @import "uibase/_headerMessage.less";
 
 @import "../../CoreHome/angularjs/siteselector/siteselector.directive.less";
+@import "../../CoreHome/angularjs/menudropdown/menudropdown.directive.less";
 
 @import "uibase/_periodSelect.less";
 
