--- a/plugins/Goals/templates/addNewGoal.twig
+++ b/plugins/Goals/templates/addNewGoal.twig
@@ -1,4 +1,12 @@
 {% if userCanEditGoals %}
+    <h2 piwik-enriched-headline>{{ 'Goals_AddNewGoal'|translate }}</h2>
+    <p>{{ 'Goals_NewGoalIntro'|translate }}</p>
+    <p>{{ 'Goals_NewGoalDescription'|translate }}
+        {{ 'Goals_NewWhatDoYouWantUsersToDo'|translate }}
+        {{ 'Goals_NewGoalYouWillBeAbleTo'|translate }}</p>
+    <p>{{ 'Goals_LearnMoreAboutGoalTrackingDocumentation'|translate("<a href='?module=Proxy&action=redirect&url=http://piwik.org/docs/tracking-goals-web-analytics/' target='_blank'>","</a>")|raw }}
+    </p>
+
     {% include "@Goals/_addEditGoal.twig" %}
 {% else %}
     <h2>{{ 'Goals_CreateNewGOal'|translate }}</h2>
