moved manage goals out of the reporting menu and added it to the user menu, instead always show the add new goal link in the reporting menu

--- a/plugins/Goals/templates/_formAddGoal.twig
+++ b/plugins/Goals/templates/_formAddGoal.twig
@@ -1,4 +1,11 @@
 <div class='entityAddContainer' style="display:none;">
+    {% if onlyShowAddNewGoal is not defined %}
+        <div class='entityCancel'>
+            {{ 'Goals_CancelAndReturnToGoals'|translate("<a class='entityCancelLink'>","</a>")|raw }}
+        </div>
+        <div class='clear'></div>
+    {% endif %}
+
     <form>
         <table class="dataTable entityTable">
             <thead>
@@ -103,4 +110,5 @@
         <input type="hidden" name="goalIdUpdate" value=""/>
         <input type="submit" value="" name="submit" id="goal_submit" class="submit"/>
     </form>
+
 </div>
