--- a/plugins/TestRunner/templates/travis.yml.twig
+++ b/plugins/TestRunner/templates/travis.yml.twig
@@ -174,8 +174,8 @@ before_script:
 
   # Make sure we use Python 2.6
   - travis_retry sudo add-apt-repository ppa:fkrull/deadsnakes -y
-  - travis_retry sudo apt-get update
-  - travis_retry sudo apt-get install python2.6 python2.6-dev -y --force-yes
+  - travis_retry sudo apt-get update > /dev/null
+  - travis_retry sudo apt-get install python2.6 python2.6-dev -y --force-yes > /dev/null
 
   # Log Analytics works with Python 2.6 or 2.7 but we want to test on 2.6
   - python2.6 --version
