Do not fail travis build if .coveralls.yml does not exist.

--- a/plugins/TestRunner/templates/travis.yml.twig
+++ b/plugins/TestRunner/templates/travis.yml.twig
@@ -104,7 +104,7 @@ install:
 
   # copy .coveralls.yml if none exists
   - if [ ! -f ../coveralls.yml ];
-    then cp .coveralls.yml ../coveralls.yml;
+    then cp .coveralls.yml ../coveralls.yml || true;
     fi
 {% endif %}
 
