splitted referrers overview in two parts "Overview" and "All Referrers"

--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -80,7 +80,8 @@
     display: none;
   }
 
-  div[data-report="Referrers.getReferrerType"] > .dataTableWrapper {
+  div[data-report="Referrers.getReferrerType"] > .dataTableWrapper,
+  div[data-report="Referrers.getAll"] > .dataTableWrapper {
     width: 800px;
   }
 
