--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -747,6 +747,12 @@ a.metric_category {
   white-space: nowrap;
 }
 
+.segmentEditorPanel.visible .segmentationTitle {
+  max-width: 180px;
+  overflow: visible; /* restore default */
+  white-space: normal; /* restore default */
+}
+
 .segname {
 	display: inline-block;
 }
