Adjusted max-width for the .segname class because the amount of space available is less when the scrollbar is present.

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -737,10 +737,18 @@ a.metric_category {
 .segmentationTitle,
 .segment-element .segment-nav a.dropdown,
 .segname {
-  max-width: 160px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.segmentationTitle,
+.segment-element .segment-nav a.dropdown {
+  max-width: 160px;
+}
+
+.segname {
+  max-width: 145px;
 }
 
 .segmentEditorPanel.visible .segmentationTitle {
