Fix CSS for selected segment list item

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -679,7 +679,7 @@ a.metric_category {
   margin: 8px;
 }
 
-.segmentSelected, .segmentSelected:hover {
+.segmentSelected, .segmentSelected:hover, .segmentEditorPanel .segmentationContainer .submenu li .segmentSelected {
   font-weight: bold;
 }
 
